--- a/LAW_details.html
+++ b/LAW_details.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Law Details</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"/>
 </head>
 <body class="bg-gray-50 font-sans">
   <div class="max-w-4xl mx-auto p-6">
@@ -17,7 +17,11 @@
         <span id="pdf-label">Download PDF</span>
       </a>
     </div>
+
     <div id="law-detail" class="bg-white p-6 rounded shadow"></div>
+
+    <!-- 🔽 باکس پایین برای نمایش محتوای HTML فایل PDF ترجمه‌شده -->
+    <div id="pdf-html-box" class="bg-white p-6 mt-6 rounded shadow text-sm whitespace-pre-line border border-gray-300 overflow-auto" style="direction: ltr;"></div>
   </div>
 
   <script>
@@ -47,7 +51,6 @@
       }
 
       const t = labels[lang];
-
       document.getElementById('back-link').textContent = t.back;
       document.getElementById('pdf-label').textContent = t.download;
 
@@ -72,19 +75,31 @@
       }
 
       const title = lang === 'fa' ? law.title_fa : lang === 'tr' ? law.title_original : lang === 'ru' ? law.title_ru : law.title_en;
-      const htmlBody = lang === 'fa' ? law.pdf_text_fa : lang === 'tr' ? law.pdf_text_original : lang === 'ru' ? law.pdf_text_ru : law.pdf_text_en;
+      const bodyText = lang === 'fa' ? law.body_fa : lang === 'tr' ? law.body_original : lang === 'ru' ? law.body_ru : law.body_en;
+      const pdfHtml = lang === 'fa' ? law.pdf_text_fa : lang === 'tr' ? law.pdf_text_original : lang === 'ru' ? law.pdf_text_ru : law.pdf_text_en;
       const catNames = (law.categories_original || []).map(id => {
         const cat = categories.find(c => c.id === id);
         if (!cat) return null;
         return lang === 'fa' ? cat.name_fa : lang === 'tr' ? cat.name : lang === 'ru' ? cat.name_ru : cat.name_en;
       }).filter(Boolean).join(', ') || 'Not specified';
 
+      // PDF download link
       const pdfUrl = `/pdfs-translated/${lang}/${lawId}.pdf`;
       document.getElementById('pdf-download').href = pdfUrl;
       document.getElementById('pdf-download').style.display = 'inline-flex';
 
-      // نمایش HTML کامل در خروجی
-      container.innerHTML = htmlBody;
+      // اطلاعات اصلی قانون
+      container.innerHTML = `
+        <h1 class="text-2xl font-bold mb-4">${title}</h1>
+        <p class="text-gray-600 mb-2"><strong>${t.lawId}</strong> ${law.law_id}</p>
+        <p class="text-gray-600 mb-2"><strong>${t.category}</strong> ${catNames}</p>
+        <p class="text-gray-600 mb-4"><strong>${t.published}</strong> ${law.publish_date}</p>
+        <div class="border p-4 rounded bg-gray-50 whitespace-pre-line">${bodyText}</div>
+      `;
+
+      // محتوای HTML آماده‌شده برای PDF
+      const previewBox = document.getElementById('pdf-html-box');
+      previewBox.innerHTML = pdfHtml;
     }
 
     window.onload = loadLawDetails;
