--- a/LAW_details.html
+++ b/LAW_details.html
@@ -47,7 +47,6 @@
       }
 
       const t = labels[lang];
-
       document.getElementById('back-link').textContent = t.back;
       document.getElementById('pdf-label').textContent = t.download;
 
@@ -66,27 +65,19 @@
       const categories = await catsRes.json();
       const law = laws[0];
       const container = document.getElementById('law-detail');
-
       if (!law) {
         container.innerHTML = '<p class="text-red-500">Law not found.</p>';
         return;
       }
 
       const title = lang === 'fa' ? law.title_fa : lang === 'tr' ? law.title_original : lang === 'ru' ? law.title_ru : law.title_en;
-      const bodyText = lang === 'fa' ? law.body_fa : lang === 'tr' ? law.body_original : lang === 'ru' ? law.body_ru : law.body_en;
-
       const catNames = (law.categories_original || []).map(id => {
         const cat = categories.find(c => c.id === id);
         if (!cat) return null;
         return lang === 'fa' ? cat.name_fa : lang === 'tr' ? cat.name : lang === 'ru' ? cat.name_ru : cat.name_en;
       }).filter(Boolean).join(', ') || 'Not specified';
 
-      // لینک PDF
-      const pdfUrl = `/pdfs-translated/${lang}/${lawId}.pdf`;
-      document.getElementById('pdf-download').href = pdfUrl;
-      document.getElementById('pdf-download').style.display = 'inline-flex';
-
-      // ساخت بدنه اصلی
+      // نمایش مشخصات بالا
       container.innerHTML = `
         <h1 class="text-2xl font-bold mb-4">${title}</h1>
         <p class="text-gray-600 mb-2"><strong>${t.lawId}</strong> ${law.law_id}</p>
@@ -94,14 +85,28 @@
         <p class="text-gray-600 mb-4"><strong>${t.published}</strong> ${law.publish_date}</p>
       `;
 
-      // نمایش محتوای کامل HTML
-      const contentBox = document.createElement('div');
-      contentBox.className = 'border p-4 rounded bg-white mt-6';
-      contentBox.innerHTML = lang === 'fa' ? law.pdf_text_fa :
-                              lang === 'tr' ? law.pdf_text_original :
-                              lang === 'ru' ? law.pdf_text_ru :
-                                              law.pdf_text_en;
-      container.appendChild(contentBox);
+      // افزودن Iframe برای نمایش PDF HTML-style
+      const iframe = document.createElement('iframe');
+      iframe.className = 'w-full border rounded bg-white mt-4';
+      iframe.style.minHeight = '400px';
+      iframe.style.border = '1px solid #ccc';
+
+      container.appendChild(iframe);
+
+      const doc = iframe.contentDocument || iframe.contentWindow.document;
+      doc.open();
+      doc.write(
+        lang === 'fa' ? law.pdf_text_fa :
+        lang === 'tr' ? law.pdf_text_original :
+        lang === 'ru' ? law.pdf_text_ru :
+                        law.pdf_text_en
+      );
+      doc.close();
+
+      // تنظیم لینک PDF
+      const pdfUrl = `/pdfs-translated/${lang}/${lawId}.pdf`;
+      document.getElementById('pdf-download').href = pdfUrl;
+      document.getElementById('pdf-download').style.display = 'inline-flex';
     }
 
     window.onload = loadLawDetails;
