--- a/LAW_details.html
+++ b/LAW_details.html
@@ -8,8 +8,15 @@
 </head>
 <body class="bg-gray-50 font-sans">
   <div class="max-w-4xl mx-auto p-6">
-    <div class="flex items-center justify-between mb-4">
+    <div class="flex flex-col md:flex-row items-center justify-between mb-4 gap-4">
       <a href="LAWS.html" class="text-blue-600 underline" id="back-link">Back to list</a>
+      <div class="flex items-center gap-2">
+        <span id="view-label">View:</span>
+        <select id="view-toggle" class="border p-2 rounded">
+          <option value="html">Extracted HTML Text</option>
+          <option value="pdf">Translated PDF View</option>
+        </select>
+      </div>
       <a id="pdf-download" href="#" class="bg-gray-900 text-white py-2 px-4 rounded-xl flex items-center gap-2" target="_blank" style="display: none">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M7 10l5 5m0 0l5-5m-5 5V4" />
@@ -17,28 +24,18 @@
         <span id="pdf-label">Download PDF</span>
       </a>
     </div>
-
-    <!-- Toggle -->
-    <div class="flex items-center mb-4">
-      <label for="toggleSource" class="mr-2 font-medium text-gray-700">View:</label>
-      <select id="toggleSource" class="border rounded px-2 py-1">
-        <option value="body">Extracted HTML Text</option>
-        <option value="pdf">Translated PDF Text</option>
-      </select>
-    </div>
-
     <div id="law-detail" class="bg-white p-6 rounded shadow"></div>
   </div>
 
   <script>
     const SUPABASE_URL = 'https://tdvimwqotnuvcdvhvbjj.supabase.co';
-    const API_KEY = 'YOUR_SUPABASE_API_KEY'; // 🔐 جایگزین کن با کلید مناسب
+    const API_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'; // کلید صحیح شما
 
     const labels = {
-      en: { lawId: "Law ID:", category: "Category:", published: "Published:", back: "Back to list", download: "Download PDF" },
-      fa: { lawId: "شناسه:", category: "دسته‌بندی:", published: "تاریخ انتشار:", back: "بازگشت به لیست", download: "دانلود PDF" },
-      tr: { lawId: "Kanun No:", category: "Kategori:", published: "Yayın Tarihi:", back: "Listeye Dön", download: "PDF indir" },
-      ru: { lawId: "ID закона:", category: "Категория:", published: "Дата публикации:", back: "Назад", download: "Скачать PDF" }
+      en: { lawId: "Law ID:", category: "Category:", published: "Published:", back: "Back to list", download: "Download PDF", view: "View:" },
+      fa: { lawId: "شناسه:", category: "دسته‌بندی:", published: "تاریخ انتشار:", back: "بازگشت به لیست", download: "دانلود PDF", view: "نمایش:" },
+      tr: { lawId: "Kanun No:", category: "Kategori:", published: "Yayın Tarihi:", back: "Listeye Dön", download: "PDF indir", view: "Görünüm:" },
+      ru: { lawId: "ID закона:", category: "Категория:", published: "Дата публикации:", back: "Назад", download: "Скачать PDF", view: "Режим:" }
     };
 
     async function loadLawDetails() {
@@ -59,6 +56,10 @@
       const t = labels[lang];
       document.getElementById('back-link').textContent = t.back;
       document.getElementById('pdf-label').textContent = t.download;
+      document.getElementById('view-label').textContent = t.view;
+
+      const viewToggle = document.getElementById('view-toggle');
+      viewToggle.addEventListener('change', () => renderView(viewToggle.value));
 
       if (!lawId) return;
 
@@ -75,7 +76,6 @@
       const categories = await catsRes.json();
       const law = laws[0];
       const container = document.getElementById('law-detail');
-
       if (!law) {
         container.innerHTML = '<p class="text-red-500">Law not found.</p>';
         return;
@@ -84,57 +84,53 @@
       const title = lang === 'fa' ? law.title_fa : lang === 'tr' ? law.title_original : lang === 'ru' ? law.title_ru : law.title_en;
       const catNames = (law.categories_original || []).map(id => {
         const cat = categories.find(c => c.id === id);
-        if (!cat) return null;
-        return lang === 'fa' ? cat.name_fa : lang === 'tr' ? cat.name : lang === 'ru' ? cat.name_ru : cat.name_en;
+        return cat ? (lang === 'fa' ? cat.name_fa : lang === 'tr' ? cat.name : lang === 'ru' ? cat.name_ru : cat.name_en) : null;
       }).filter(Boolean).join(', ') || 'Not specified';
 
-      // نمایش مشخصات
+      // محتوای ثابت بالا
       container.innerHTML = `
         <h1 class="text-2xl font-bold mb-4">${title}</h1>
         <p class="text-gray-600 mb-2"><strong>${t.lawId}</strong> ${law.law_id}</p>
         <p class="text-gray-600 mb-2"><strong>${t.category}</strong> ${catNames}</p>
         <p class="text-gray-600 mb-4"><strong>${t.published}</strong> ${law.publish_date}</p>
+        <div id="law-content"></div>
       `;
 
-      const iframe = document.createElement('iframe');
-      iframe.className = 'w-full border rounded bg-white mt-4';
-      iframe.style.minHeight = '400px';
-      iframe.style.border = '1px solid #ccc';
-      container.appendChild(iframe);
+      // تابع رندر محتوای متغیر
+      function renderView(mode) {
+        const contentDiv = document.getElementById('law-content');
+        contentDiv.innerHTML = ''; // پاک‌سازی
+        if (mode === 'pdf') {
+          const iframe = document.createElement('iframe');
+          iframe.className = 'w-full border rounded bg-white mt-4';
+          iframe.style.minHeight = '400px';
+          iframe.style.border = '1px solid #ccc';
+          contentDiv.appendChild(iframe);
 
-      const updateIframeContent = () => {
-        const viewMode = document.getElementById('toggleSource').value;
-        const doc = iframe.contentDocument || iframe.contentWindow.document;
-        doc.open();
-        if (viewMode === 'body') {
-          doc.write(
-            `<pre style="white-space: pre-wrap; font-family: sans-serif;">${
-              lang === 'fa' ? law.body_fa :
-              lang === 'tr' ? law.body_original :
-              lang === 'ru' ? law.body_ru :
-                              law.body_en
-            }</pre>`
-          );
-        } else {
+          const doc = iframe.contentDocument || iframe.contentWindow.document;
+          doc.open();
           doc.write(
             lang === 'fa' ? law.pdf_text_fa :
             lang === 'tr' ? law.pdf_text_original :
             lang === 'ru' ? law.pdf_text_ru :
                             law.pdf_text_en
           );
+          doc.close();
+        } else {
+          const bodyText =
+            lang === 'fa' ? law.body_fa :
+            lang === 'tr' ? law.body_original :
+            lang === 'ru' ? law.body_ru :
+                            law.body_en;
+          const div = document.createElement('div');
+          div.className = "whitespace-pre-line mt-4 text-gray-800";
+          div.innerText = bodyText || '(No content)';
+          contentDiv.appendChild(div);
         }
-        doc.close();
-      };
+      }
 
-      // تنظیم اولیه
-      updateIframeContent();
-
-      // واکنش به سوییچ
-      document.getElementById('toggleSource').addEventListener('change', updateIframeContent);
-
-      // تنظیم لینک PDF
-      const pdfUrl = `/pdfs-translated/${lang}/${lawId}.pdf`;
-      document.getElementById('pdf-download').href = pdfUrl;
+      renderView(viewToggle.value); // نمایش پیش‌فرض
+      document.getElementById('pdf-download').href = `/pdfs-translated/${lang}/${lawId}.pdf`;
       document.getElementById('pdf-download').style.display = 'inline-flex';
     }
 
